--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hello !</title>
-	<link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+	<link href="//fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 	<link href="css/bootstrap.hero.min.css" rel="stylesheet">
 	<link href="css/w3.css" rel="stylesheet">
 	<script src="js/jquery-2.1.4.js"></script>
