--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <footer class="container-fluid text-center" style="font-size: 35px">
 	<a href="//twitter.com/notJuanMa" target="_blank"><span class="fa fa-lg fa-twitter w3-text-teal"></span></a>
 	<a href="//github.com/notJuanMa" target="_blank"><span class="fa fa-lg fa-github w3-text-teal"></span></a>
+	<a href="//www.youtube.com/channel/UCddx1Aj6jOMr8KTZM6-StLg" target="_blank"><span class="fa fa-lg fa-youtube w3-text-teal"></span></a>
 </footer>
 
 <script>
